--- a/package.json
+++ b/package.json
@@ -1,5 +1,13 @@
 {
   "name": "voting_system",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "@rails/webpacker": "3.5",
+    "bulma": "0.7.2",
+    "jquery": "^3.3.1"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
+  }
 }
